tilføjet utopia fontsizes

--- a/src/Layouts/MainLayout.astro
+++ b/src/Layouts/MainLayout.astro
@@ -3,6 +3,7 @@ import Footer from "../components/Footer.astro";
 import Menu from "../components/Menu.astro";
 
 const { pagetitle, display } = Astro.props;
+import "../css/reset.css";
 import "../css/general.css";
 ---
 
