--- a/src/css/general.css
+++ b/src/css/general.css
@@ -1,16 +1,3 @@
-/* ------ css reset ------ */
-* {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
-}
-
-img {
-  width: 100%;
-  height: auto;
-  display: block;
-}
-
 @font-face {
   font-family: "Druk Wide Bold Bold";
   font-style: normal;
@@ -55,6 +42,17 @@ html {
     color: var(--accent1);
   }
 }
+:root {
+  --step--2: clamp(0.7813rem, 0.7747rem + 0.0326vw, 0.8rem);
+  --step--1: clamp(0.9375rem, 0.9158rem + 0.1087vw, 1rem);
+  --step-0: clamp(1.125rem, 1.0815rem + 0.2174vw, 1.25rem);
+  --step-1: clamp(1.35rem, 1.2761rem + 0.3696vw, 1.5625rem);
+  --step-2: clamp(1.62rem, 1.5041rem + 0.5793vw, 1.9531rem);
+  --step-3: clamp(1.944rem, 1.771rem + 0.8651vw, 2.4414rem);
+  --step-4: clamp(2.3328rem, 2.0827rem + 1.2504vw, 3.0518rem);
+  --step-5: clamp(2.7994rem, 2.4462rem + 1.7658vw, 3.8147rem);
+  --step-6: clamp(3.3592rem, 2.8691rem + 2.4507vw, 4.7684rem);
+}
 
 .display {
   font-family: "STRETCH SANS";
@@ -65,7 +63,7 @@ html {
 
 h1 {
   font-family: "Druk Wide Bold Bold";
-  font-size: 64px;
+  font-size: var(--step-6);
   color: var(--accent1);
   text-transform: uppercase;
   margin: 0;
@@ -74,7 +72,7 @@ h1 {
 }
 h2 {
   font-family: "Druk Wide Bold Bold";
-  font-size: 48px;
+  font-size: var(--step-5);
   color: var(--accent1);
   text-transform: uppercase;
   margin: 0;
@@ -84,7 +82,7 @@ h2 {
 
 h3 {
   font-family: "Work Sans", sans-serif;
-  font-size: 36px;
+  font-size: var(--step-4);
   font-weight: 700;
   color: var(--accent1);
   text-transform: uppercase;
@@ -92,7 +90,7 @@ h3 {
 
 h4 {
   font-family: "Work Sans", sans-serif;
-  font-size: 24px;
+  font-size: var(--step-3);
   font-weight: 700;
   color: var(--accent1);
   text-transform: uppercase;
@@ -100,7 +98,7 @@ h4 {
 
 h5 {
   font-family: "Work Sans", sans-serif;
-  font-size: 20px;
+  font-size: var(--step-2);
   font-weight: 700;
   color: var(--accent1);
   text-transform: uppercase;
@@ -112,38 +110,7 @@ p {
   font-weight: 400;
   font-style: normal;
   color: var(--accent2);
-  font-size: 20px;
-}
-/* Desktop sizes */
-@media (min-width: 900px) {
-  .display {
-    font-family: "STRETCH SANS";
-    font-size: 80px;
-    letter-spacing: 1.5cqw;
-  }
-  h1 {
-    font-family: "Druk Wide Bold Bold";
-    font-size: 80px;
-  }
-  h2 {
-    font-family: "Druk Wide Bold Bold";
-    font-size: 64px;
-  }
-
-  h3 {
-    font-family: "Work Sans", sans-serif;
-    font-size: 48px;
-  }
-
-  h4 {
-    font-family: "Work Sans", sans-serif;
-    font-size: 36px;
-  }
-
-  h5 {
-    font-family: "Work Sans", sans-serif;
-    font-size: 24px;
-  }
+  font-size: var(--step-0);
 }
 
 a:hover .arrow {
