--- a/src/Layouts/MainLayout.astro
+++ b/src/Layouts/MainLayout.astro
@@ -26,7 +26,7 @@ import "../css/general.css";
   <body>
     <div class="grid">
       <div class="container1">
-        <h1 class="display">{display}</h1>
+        <span class="display">{display}</span>
       </div>
       <main class="container2">
         <slot />
@@ -71,8 +71,8 @@ import "../css/general.css";
       display: grid;
       grid-template-columns: auto 4rem;
     }
-    .container1 {
-      top: 32rem;
+    .display {
+      top: 1rem;
       transform: translateY(-10vh) translateX(-45%) rotate(-90deg); /* Adjust for rotation */
     }
     .container2 {
