--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import About from "../components/About.astro";
 import HeroArea from "../components/HeroArea.astro";
 ---
 
-<MainLayout pagetitle="Index">
-  <HeroArea display="<PROFILE>" />
+<MainLayout display="<PROFILE>" pagetitle="Index">
+  <HeroArea />
   <About />
 </MainLayout>
