--- a/src/components/HeroArea.astro
+++ b/src/components/HeroArea.astro
@@ -26,7 +26,7 @@
 <style>
   h1 {
     text-align: right;
-    color: var(--secondary);
+    -webkit-text-stroke: var(--secondary) 3px;
     word-break: break-all;
     margin-top: 4rem;
   }
