--- a/src/components/HeroArea.astro
+++ b/src/components/HeroArea.astro
@@ -2,90 +2,10 @@
 
 ---
 
-<section class="desktopgrid">
-  <div class="deskopcontainer1">
-    <h1><span>//</span>JORIS TEN VOORDE</h1>
-
-    <div class="box1">
-      <div class="flexcolumn">
-        <a href="/projects"><h4>#latest projects <span class="arrow">&#10132;</span></h4></a>
-        <a href=""><h4>#about me <span class="arrow">&#10132;</span></h4></a>
-      </div>
-    </div>
-  </div>
-  <div class="box2">
-    <div class="flexcolumn flexdesktop">
-      <h4 class="lr-anim">//LOOKING 4 INTERNSHIP, SPRING 2025</h4>
-      <h4 class="rl-anim">//LOOKING 4 INTERNSHIP, SPRING 2025</h4>
-      <h4 class="lr-anim-slow">//LOOKING 4 INTERNSHIP, SPRING 2025</h4>
-      <h4 class="rl-anim delay1">//studying multimediadesign at kea</h4>
-    </div>
-  </div>
+<section class="content">
+  <h1>hej</h1>
 </section>
-
 <style>
-  h1 {
-    text-align: right;
-    -webkit-text-stroke: var(--secondary) 3px;
-    word-break: break-all;
-    margin-top: 4rem;
-  }
-  .box1 {
-    background: var(--gradient3);
-    margin-left: -7rem;
-    text-align: right;
-    padding-top: 3rem;
-    padding-bottom: 16rem;
-  }
-
-  h4 {
-    color: var(--accent2);
-  }
-  .flexcolumn {
-    display: flex;
-    flex-direction: column;
-  }
-  .arrow {
-    color: var(--tertiary);
-
-    margin-right: 0.2rem;
-  }
-
-  .box2 {
-    background: var(--gradient4);
-    margin-left: -8rem;
-    text-align: right;
-    padding-top: 3rem;
-    padding-bottom: 3rem;
-    overflow-x: hidden;
-  }
-  .box2 h4 {
-    white-space: nowrap;
-  }
-
   @media (min-width: 900px) {
-    .desktopgrid {
-      display: grid;
-      grid-template-columns: 1.5fr 1fr;
-    }
-    h1 {
-      margin-top: 14rem;
-      word-break: normal;
-    }
-    .box1 {
-      padding-top: 5rem;
-      margin-left: -10rem;
-    }
-    .box2 {
-      z-index: -1;
-      height: 10rem;
-      margin-top: auto;
-
-      overflow: hidden;
-      padding: 1rem;
-    }
-    .flexdesktop {
-      gap:;
-    }
   }
 </style>
