--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -22,7 +22,6 @@ import "../css/general.css";
     background-color: var(--accent1);
   }
   .menu {
-    z-index: 5;
     position: sticky;
     top: 2%;
 
@@ -41,9 +40,9 @@ import "../css/general.css";
     }
   }
 
-  @media (min-width: 900px) {
+  /* @media (min-width: 900px) {
     .menu {
       width: 4rem;
     }
-  }
+  } */
 </style>
