--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,11 @@
 import MainLayout from "../Layouts/MainLayout.astro";
 import About from "../components/About.astro";
 import HeroArea from "../components/HeroArea.astro";
+import Wid from "../components/Wid.astro";
 ---
 
 <MainLayout display="<PROFILE>" pagetitle="Index">
   <HeroArea />
   <About />
+  <Wid />
 </MainLayout>
