ændret root på img

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -28,7 +28,7 @@ import "../css/general.css";
       .wrapper:after {
         display: block;
         content: "";
-        background: url(/public/grid1.svg);
+        background: url(/grid1.svg);
         transform: rotate(180deg);
         width: 20%;
         aspect-ratio: 1/1;
@@ -53,7 +53,7 @@ import "../css/general.css";
           :first-child {
             opacity: 0;
           }
-          background-image: url(/public/profile2.webp);
+          background-image: url(/profile2.webp);
           background-size: cover;
           aspect-ratio: 1/1;
           width: fit-content;
