--- a/src/components/Wid.astro
+++ b/src/components/Wid.astro
@@ -10,11 +10,11 @@
         <th>Languages</th>
         <th></th>
       </tr>
-      <tr> <td>DANSK (Modersmål)</td> <td class="stars"> <img src="/public/Star_full.svg" alt="star icon" /><img src="/public/Star_full.svg" alt="star icon" /><img src="/public/Star_full.svg" alt="star icon" /></td> </tr>
-      <tr> <td>NEDERLANDS (Belangrijk!)</td> <td class="stars"> <img src="/public/Star_full.svg" alt="star icon" /><img src="/public/Star_full.svg" alt="star icon" /><img src="/public/Star_full.svg" alt="star icon" /></td> </tr>
-      <tr> <td>ENGLISH (Also important)</td> <td class="stars"> <img src="/public/Star_full.svg" alt="star icon" /><img src="/public/Star_full.svg" alt="star icon" /><img src="/public/Star_full.svg" alt="star icon" /></td> </tr>
-      <tr> <td>DEUTCH (Natürlich)</td><td class="stars"> <img src="/public/Star_full.svg" alt="star icon" /><img src="/public/Star_half.svg" alt="star icon" /><img src="/public/Star_empty.svg" alt="star icon" /></td> </tr>
-      <tr> <td>ESPAñOL (Vale)</td> <td class="stars"> <img src="/public/Star_full.svg" alt="star icon" /><img src="/public/Star_empty.svg" alt="star icon" /><img src="/public/Star_empty.svg" alt="star icon" /></td></tr>
+      <tr> <td>DANSK (Modersmål)</td> <td class="stars"> <img src="/Star_full.svg" alt="star icon" /><img src="/Star_full.svg" alt="star icon" /><img src="/Star_full.svg" alt="star icon" /></td> </tr>
+      <tr> <td>NEDERLANDS (Belangrijk!)</td> <td class="stars"> <img src="/Star_full.svg" alt="star icon" /><img src="/Star_full.svg" alt="star icon" /><img src="/Star_full.svg" alt="star icon" /></td> </tr>
+      <tr> <td>ENGLISH (Also important)</td> <td class="stars"> <img src="/Star_full.svg" alt="star icon" /><img src="/Star_full.svg" alt="star icon" /><img src="/Star_full.svg" alt="star icon" /></td> </tr>
+      <tr> <td>DEUTCH (Natürlich)</td><td class="stars"> <img src="/Star_full.svg" alt="star icon" /><img src="/Star_half.svg" alt="star icon" /><img src="/Star_empty.svg" alt="star icon" /></td> </tr>
+      <tr> <td>ESPAñOL (Vale)</td> <td class="stars"> <img src="/Star_full.svg" alt="star icon" /><img src="/Star_empty.svg" alt="star icon" /><img src="/Star_empty.svg" alt="star icon" /></td></tr>
     </table>
 
     <div class="table-wrapper">
