--- a/src/css/general.css
+++ b/src/css/general.css
@@ -193,6 +193,10 @@ hr {
     display: grid;
     grid-template-columns: 1fr 3fr;
   }
+  .grid3-1 {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+  }
 }
 
 @media (max-width: 900px) {
