--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import MainLayout from "../Layouts/MainLayout.astro";
 import About from "../components/About.astro";
+import Connect from "../components/Connect.astro";
 import HeroArea from "../components/HeroArea.astro";
 import Wid from "../components/Wid.astro";
 ---
@@ -9,4 +10,5 @@ import Wid from "../components/Wid.astro";
   <HeroArea />
   <About />
   <Wid />
+  <Connect />
 </MainLayout>
