--- a/src/css/general.css
+++ b/src/css/general.css
@@ -34,10 +34,6 @@ html {
   --gradient5: linear-gradient(90deg, var(--secondary), var(--primary));
   --gradient6: linear-gradient(90deg, var(--secondary), var(--tertiary));
 
-  a {
-    text-decoration: none;
-  }
-
   ::selection {
     background-color: var(--tertiary);
     color: var(--accent1);
@@ -140,6 +136,18 @@ p {
   font-style: normal;
   color: var(--accent2);
   font-size: var(--step-0);
+}
+
+a {
+  color: var(--accent2);
+  text-decoration: underline;
+}
+a:hover,
+a::selection {
+  color: var(--secondary);
+}
+a:active {
+  color: var(--accent2);
 }
 
 a:hover .arrow {
