--- a/src/components/Wid.astro
+++ b/src/components/Wid.astro
@@ -3,7 +3,7 @@
 ---
 
 <section>
-  <h1>what_i_do</h1>
+  <h1 id="wid">what_i_do</h1>
   <h6>#Recent projects</h6>
   <div class="grid2-3">
     <div class="txt1">
