--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,8 +7,8 @@ import Wid from "../components/Wid.astro";
 ---
 
 <MainLayout display="<PROFILE>" pagetitle="Index">
-  <HeroArea />
-  <About />
-  <Wid />
-  <Connect />
+  <HeroArea id="index" />
+  <About id="about" />
+  <Wid id="wid" />
+  <Connect id="connect" />
 </MainLayout>
