--- a/src/Layouts/MainLayout.astro
+++ b/src/Layouts/MainLayout.astro
@@ -5,6 +5,7 @@ import Menu from "../components/Menu.astro";
 const { pagetitle, display } = Astro.props;
 import "../css/reset.css";
 import "../css/general.css";
+import "../css/animation.css";
 ---
 
 <html lang="en">
@@ -70,13 +71,6 @@ main{
   display: grid;
   grid-column:  content span;
 }
-
-
-
-
-
-
-
 
 
 
