--- a/src/components/Connect.astro
+++ b/src/components/Connect.astro
@@ -2,8 +2,8 @@
 
 ---
 
-<section>
-  <div class="header-wrapper grid3-1">
+<section id="">
+  <div id="connect" class="header-wrapper grid3-1">
     <h1>connect_with_me</h1>
   </div>
   <div class="grid1-1">
