--- a/src/css/animation.css
+++ b/src/css/animation.css
@@ -20,7 +20,7 @@
 
 .rl-anim {
   animation-name: right-left-animation;
-  animation-duration: 20s;
+  animation-duration: 5s;
   animation-timing-function: linear;
   animation-delay: 0.5s;
   animation-iteration-count: infinite;
@@ -28,12 +28,12 @@
 }
 @keyframes right-left-animation {
   0% {
-    transform: translateX(60vh);
+    transform: translateX(35vw);
   }
   50% {
   }
   100% {
-    transform: translateX(-65vh);
+    transform: translateX(-15vw);
   }
 }
 
@@ -59,4 +59,8 @@
 
 .delay1 {
   animation-delay: -2s;
+}
+
+:root {
+  --hover: ease 0.2s all;
 }
