--- a/src/components/Wid.astro
+++ b/src/components/Wid.astro
@@ -17,11 +17,11 @@
   </div>
   <div class="grid1-1">
     <figure>
-      <img class="media" src="/public/kongshaug1.webp" alt="website before our solution" />
+      <img class="media" src="/kongshaug1.webp" alt="website before our solution" />
       <span>Current solution</span>
     </figure>
     <figure>
-      <img class="media" src="/public/kongshaug2.webp" alt="website after our solution" />
+      <img class="media" src="/kongshaug2.webp" alt="website after our solution" />
       <span>Our solution</span>
     </figure>
   </div>
